@startuml class_diagram
!theme plain
skinparam classAttributeIconSize 0
title Learning Journey - Data Model

class profiles {
  id : uuid <<PK>>
  first_name : text
  last_name : text
  is_indigenous : boolean
  onboarding_completed : boolean
  learning_completed : boolean
  role : text
}

class learning_modules {
  id : uuid <<PK>>
  title : text
  description : text
  content_type : text <<video|text>>
  content_url : text
  content_body : text
  duration_minutes : int
  order_index : int
  audience : text <<non_indigenous|indigenous|all>>
  is_required : boolean
}

class learning_progress {
  id : uuid <<PK>>
  user_id : uuid <<FK profiles>>
  module_id : uuid <<FK learning_modules>>
  completed : boolean
  completed_at : timestamptz
  time_spent_seconds : int
  --
  unique(user_id, module_id)
}

profiles "1" ||--o{ "0..*" learning_progress : user_id
learning_modules "1" ||--o{ "0..*" learning_progress : module_id
@enduml
